# workload-tool

./: .dockerignore  .gitignore  CHANGELOG_v0.4.22.md  CHANGELOG_v0.4.23.md  CHANGELOG_v0.4.24.md  CHANGELOG_v0.4.25.md  CHANGELOG_v0.4.26.md  CHANGELOG_v0.4.27-A.md  CHANGELOG_v0.4.32.md  CHANGELOG_v0.4.33.md  CHANGELOG_v0.4.34.md  CHANGELOG_v0.4.35.md  CHANGELOG_v0.4.36.md  CHANGELOG_v0.4.37.md  CHANGELOG_v0.4.38.md  CHANGELOG_v0.4.39.md  CHANGELOG_v0.4.40.md  CHANGELOG_v0.4.41.md  CHANGELOG_v0.4.42.md  CHANGELOG_v0.4.43.md  CHANGELOG_v0.4.44.md  CHANGELOG_v0.4.45.md  CHANGELOG_v0.4.47.md  CHANGELOG_v0.4.48.md  CHANGELOG_v0.4.49.md  CHANGELOG_v0.4.50.md  CHANGELOG_v0.4.51.md  CHANGELOG_v0.4.52.md  CHANGELOG_v0.4.53.md  CHANGELOG_v0.4.54.md  CHANGELOG_v0.4.55.md  CHANGELOG_v0.4.56.md  CHANGELOG_v0.4.57.md  CHANGELOG_v0.4.58.md  Cargo.toml  Dockerfile  arch-design-business-division.md  build_installer.iss  design-business-division.md  design-sample-info-excel-form.md  (+7 more)
.github/workflows/: docker-publish.yml
docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md  system_design_v0.4.26.md
docs/docs/: class-diagram.mermaid  sequence-diagram.mermaid  system_design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1783737925570-ca8fa8fb80d17.mjs  vite.config.ts.timestamp-1783738398700-e8f30dc442c24.mjs
frontend/src/: App.tsx  UserContext.tsx  main.tsx
src/: audit.rs  config.rs  error.rs  lib.rs  main.rs  tray.rs
src/api/: article_handler.rs  audit_handler.rs  (+34 more)
static/: index.html
(+127 files in other folders)
