[package]
name = "workload-tool"
version = "0.4.54"
edition = "2021"

[[bin]]
name = "workload-tool"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
thiserror = "1"
anyhow = "1"
regex = "1"
rust_xlsxwriter = "0.78"
calamine = "0.23"
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.18", features = ["derive"] }
url-escape = "0.1"
toml = "0.8"
tray-icon = "0.19"
winit = "0.30"
open = "5"
image = "0.25"
crossbeam-channel = "0.5"
base64 = "0.22"
quick-xml = "0.36"
pdf-extract = "0.8"
zip = "2"

bcrypt = "0.15"
jsonwebtoken = "9"

utoipa = { version = "4" }

[features]
console = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Data_Pdf", "Foundation", "Graphics_Imaging", "Storage_Streams", "Storage"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
